cmake_minimum_required(VERSION 3.12)
project(test)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -pthread")
add_executable(test main.cpp GameObj.h)

INCLUDE(FindPkgConfig)

PKG_SEARCH_MODULE(SDL2 REQUIRED sdl2)
PKG_SEARCH_MODULE(SDLIMAGE REQUIRED SDL_image>=1.0.0)

INCLUDE_DIRECTORIES(${SDL2_INCLUDE_DIRS} ${SDLIMAGE_INCLEDE_DIRS})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${SDL2_LIBRARIES} ${SDLIMAGE_LIBRARIES})
